Added few more apies to provide details about match and innings
